udate(cmd): change bully conf file for docker usage

--- a/cmd/bully/conf/bully.conf.yaml
+++ b/cmd/bully/conf/bully.conf.yaml
@@ -6,14 +6,14 @@
 #
 
 # Data Server address.
-data_server_address: "127.0.0.1:8081"
+data_server_address: "data-viz:8081"
 
 # Peers addresses.
 #
 # NOTE: key represents a peer's ID, value represents its address.
 peer_address:
-    - "0": "0.0.0.0:9990"
-    - "1": "0.0.0.0:9991"
-    - "2": "0.0.0.0:9992"
-    - "3": "0.0.0.0:9993"
-    - "4": "0.0.0.0:9994"
+    "0": "bully-00:9990"
+    "1": "bully-01:9991"
+    "2": "bully-02:9992"
+    "3": "bully-03:9993"
+    "4": "bully-04:9994"
