update(.gitignore): add docker data-viz directory in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ cmd/bully/bully
 cmd/data-viz/data-viz
 build/docker/bully/bully
 build/docker/bully/bully.conf.yaml
-build/docker/data-viz/
+build/docker/data-viz/data-viz
