--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,10 @@ jobs:
           command: make install
       - run:
           name: Build binaries
-          command: make build
+          command: |
+            make build
+            chmod +x cmd/bully/bully
+            chmod +x cmd/data-viz/data-viz 
       - persist_to_workspace:
           root: cmd
           paths:
